@@ -1,5 +1,9 @@
 ---
 title: Configuration Parameters Index (nuxeo.conf)
+review:
+    comment: ''
+    date: ''
+    status: ok
 labels:
     - properties
     - nuxeo_conf
@@ -988,6 +992,1001 @@ Some parameters can be set By contributing to the [Configuration Service.](http:
 _Looking for a specific parameter?_
 
 {{! table-filter removed }}
+
+Parameter
+
+Default value ("|" separates possible values)
+
+Description
+
+Since
+
+`JAVA_HOME`
+
+None.
+If undefined nuxeoctl script will try to discover it.
+
+Path to Java home directory.
+
+&nbsp;
+
+`JAVA_OPTS`
+
+`-Xms512m -Xmx1024m -XX:MaxPermSize=512m`
+`-Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000`
+`-Dfile.encoding=UTF-8`
+
+Optional values passed to the JVM.
+Nuxeo requires at least 1024 Mo in JVM heap size and 256Mo as maximum permanent size (512 recommended).
+Decreasing garbage collector frequency avoid having too much CPU usage (Sun Java specific options, recommended by JBoss).
+
+&nbsp;
+
+`launcher.start.max.wait`
+
+300
+
+In seconds. Maximum time to wait for effective Nuxeo server start before giving up (applies on commands "start" and "restart").
+
+&nbsp;
+
+`launcher.stop.max.wait`
+
+60
+
+In seconds. Maximum time to wait for effective Nuxeo server stop cleanly before using forced stop.
+
+&nbsp;
+
+`launcher.override.java.tmpdir`
+
+true
+
+Possible values: `true` or `false` .
+If true, will set `java.io.tmpdir = ${nuxeo.tmp.dir}`.
+
+&nbsp;
+
+`nuxeo.log.dir`
+
+log
+
+Log directory (absolute or relative to `NUXEO_HOME`).
+Linux recommended path: `/var/log/nuxeo/...`
+
+&nbsp;
+
+`nuxeo.pid.dir`
+
+bin
+
+Directory where to store Nuxeo PID file.
+
+&nbsp;
+
+`nuxeo.data.dir`
+
+data
+
+Data directory (absolute or relative to NUXEO_HOME). It involves all data not being stored in database.
+Linux recommended path: `/var/lib/nuxeo/...`
+
+&nbsp;
+
+`nuxeo.tmp.dir`
+
+`server/default/tmp` (JBoss)
+`tmp` (Tomcat)
+`tmp` (Jetty)
+
+Location of the temporary files.
+
+&nbsp; `nuxeo.mp.dir` `packages` Since Nuxeo 5.9.4\. Nuxeo Packages directory. Since Nuxeo 5.9.4
+
+`nuxeo.force.generation`
+
+`true` | `once`
+
+If "`true`", will force generation of configuration files; otherwise they are only generated when not existing.
+If "`once`", will force one time and switch to false after successful generation.
+If "`false`", configuration changes are ignored.
+
+&nbsp;
+
+`nuxeo.templates`
+
+default
+
+Comma separated list of templates to include.
+Templates paths are absolute or relative to `$NUXEO_HOME/templates/`.
+Available templates: postgresql, mysql, mssql, oracle, custom, ...
+
+&nbsp;
+
+`nuxeo.bind.address`
+
+0.0.0.0
+
+Server binding address. "0.0.0.0" means "all available network interfaces".
+WARNING: when changing `nuxeo.bind.address`, you must accordingly change `nuxeo.loopback.url`.
+
+&nbsp;
+
+`nuxeo.server.http.port`
+
+8080
+
+Server HTTP listen port.
+
+&nbsp;
+
+`nuxeo.server.ajp.port`
+
+8009
+
+Server AJP listen port.
+This is not available on Jetty.
+
+&nbsp;
+
+`nuxeo.server.jvmRoute`
+
+nuxeo
+
+Server AJP route for load-balancing
+
+&nbsp;
+
+`nuxeo.server.tomcat_admin.host`
+
+localhost Since Nuxeo 7.3\. Tomcat server's "admin" host.
+This is the address on which the server waits for a shutdown command. Since Nuxeo 7.3
+
+`nuxeo.server.tomcat-admin.port`
+
+8005
+
+Deprecated since Nuxeo 5.6 and replaced by&nbsp;`nuxeo.server.tomcat_admin.port`. Tomcat server's "admin" port.
+This is only useful if you have another Tomcat server running and want to avoid port conflicts.
+
+Deprecated since Nuxeo 5.6
+
+`nuxeo.server.tomcat_admin.port`
+
+8005
+
+Since Nuxeo 5.6\. Tomcat server's "admin" port.
+Replaces `nuxeo.server.tomcat-admin.port`. This is only useful if you have another Tomcat server running and want to avoid port conflicts.
+
+Since Nuxeo 5.6
+
+`nuxeo.server.https.port`
+
+8443
+
+Server HTTPS listen port.
+This is only useful if you have modified the application server to use HTTPS.
+
+&nbsp;
+
+`nuxeo.server.emptySessionPath`
+
+false
+
+(Tomcat only) Since Nuxeo 5.5, until 5.7.1\. If set to true, all paths for session cookies will be set to /.
+May be useful to enable authentication on proxyfied WebEngine applications (see [HTTP and HTTPS Reverse-Proxy Configuration]({{page page='http-and-https-reverse-proxy-configuration'}})).
+Removed since Nuxeo 5.7.2 (see [http://tomcat.apache.org/migration-7.html#Session_cookie_configuration](http://tomcat.apache.org/migration-7.html#Session_cookie_configuration)).
+
+Since Nuxeo 5.5, until Nuxeo 5.7.1 `nuxeo.server.signature` None (Tomcat only) Since Nuxeo 6.0\. If set, this will replace the default value of the "Server:" HTTP response header. &nbsp;
+
+`org.nuxeo.ecm.instance.name`
+
+Nuxeo 5.9.3-SNAPSHOT
+
+Server name.
+
+&nbsp;
+
+`org.nuxeo.ecm.instance.description`
+
+Nuxeo
+
+Server description.
+
+&nbsp;
+
+`org.nuxeo.ecm.product.name`
+
+Nuxeo Platform
+
+Product name, displayed in the page title on your browser.
+
+&nbsp;
+
+`org.nuxeo.ecm.product.version`
+
+5.9.3-SNAPSHOT &nbsp; &nbsp; {{> anchor 'orgnuxeodev'}} `org.nuxeo.dev`
+
+&nbsp;
+
+false
+
+Since Nuxeo 5.6, this property uses the "dev" mode when running the Nuxeo application. This parameter should not be set to `true` on a production server, as it disables some caches, and enables hot redeploy of some JARs (Studio JARs for instance). For more information about the dev mode, see [How to do incremental deployment (hot reload) in the JSF-Seam layer]({{page space='corg' page='supporting-hot-reload'}}).
+
+Before 5.6, setting this property to true stopped the runtime when an error occured at deployment. This behaviour has been removed from the dev mode and is now controlled by the property `org.nuxeo.runtime.strict`.
+
+Since Nuxeo 5.6 `org.nuxeo.prod` false Since Nuxeo 5.8, setting this property to "true" will display a quite visible warning message in the Admin tab, stating that this is a production instance. This is useful for administrators who are sometimes confusing their Nuxeo production server with their test server (not to rat anyone out). Since Nuxeo 5.8 {{! multiexcerpt name='org.nuxeo.rest.stack.enable'}}
+
+`org.nuxeo.rest.stack.enable`
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.rest.stack.enable-default'}}
+
+false
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.rest.stack.enable-description'}}
+
+Since Nuxeo 6.0, you can enable this mode if you'd like to display exception stacktraces in JSON response when error occurs after REST calls.
+
+See [Web Exceptions documentation]({{page space='nxdoc710' page='web-exceptions-errors'}}) to get modes description and examples.
+
+{{! /multiexcerpt}} Since Nuxeo 6.0 {{! multiexcerpt name='org.nuxeo.automation.trace'}}
+
+`org.nuxeo.automation.trace`
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace-default'}}
+
+false
+
+{{! /multiexcerpt}}
+
+Enable this mode if you'd like to display automation traces during runtime:
+
+{{! multiexcerpt name='org.nuxeo.automation.trace-description'}}
+
+*   You'll benefit from exhaustive logs to debug all automation chain and/or operation execution.
+*   The automation trace mode is disabled by default (not suitable for production).
+*   It can be activated through JMX via `org.nuxeo:TracerFactory` MBean during runtime.
+
+{{! /multiexcerpt}} &nbsp; {{! multiexcerpt name='org.nuxeo.automation.trace.printable'}}
+
+`org.nuxeo.automation.trace.printable`
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace.printable-default'}}
+
+*
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace.printable-description'}}
+
+By default, all automation executions are 'printable' (appear in logs) when automation trace mode is on.
+
+*   You can filter chain and/or operation execution trace printing by setting this property to chain name and/or operation separated by comma.
+*   Comment this property to get all automation chains/operations back in printing (by default set to * (star))
+
+{{! /multiexcerpt}} &nbsp;
+
+`org.nuxeo.ecm.webapp.dashboard.mode`
+
+auto
+
+DEPRECATED since Nuxeo 6.0.
+
+Defines the dashboard mode. There are three modes:
+
+*   `auto`: (default value) let Nuxeo choose dashboard based on user browser capabilities.
+*   `old`: force usage of the 'old' JSF based dashboard for all users.
+*   `opensocial`: force usage of the new OpenSocial based dashboard for all users.
+
+&nbsp;
+
+`_templateName_.target`
+
+`server/default/deploy/nuxeo.ear`
+
+Directory where _templateName_ files will be deployed.
+
+&nbsp;
+
+`mailservice.user`
+
+nobody
+
+(JBoss only) User for e-mail authentication.
+
+&nbsp;
+
+`mailservice.password`
+
+password
+
+(JBoss only) Password for e-mail authentication.
+
+&nbsp;
+
+`mail.store.protocol`
+`mail.transport.protocol`
+
+pop3
+smtp
+
+Server protocol parameters for e-mailing.
+
+&nbsp;
+
+`mail.user`
+
+nobody
+
+User who will receive e-mail (unused in Nuxeo).
+
+&nbsp;
+
+`mail.store.host`
+
+localhost
+
+e-Mail server.
+
+&nbsp;
+
+`mail.store.user`
+
+anonymous
+
+&nbsp; &nbsp;
+
+`mail.store.password`
+
+password
+
+&nbsp; &nbsp;
+
+`mail.debug`
+
+false
+
+Enable debugging output from the JavaMail classes.
+
+&nbsp;
+
+`nuxeo.notification.eMailSubjectPrefix`
+
+[Nuxeo]
+
+Subject prefix in Nuxeo notification e-mails.
+
+&nbsp; `nuxeo.notification.eMailSigner` The Nuxeo team Signer of the sent e-mail. &nbsp;
+
+`mail.transport.host`
+
+localhost
+
+SMTP gateway server.
+
+&nbsp;
+
+`mail.transport.port`
+
+25 (without authentication)
+587 (with authentication)
+465 (SSL)
+
+e-Mail server port.
+
+&nbsp;
+
+`mail.transport.usetls`
+
+false
+
+Use TLS for the SMTP connection.
+
+&nbsp;
+
+`mail.transport.auth`
+
+true
+
+&nbsp; &nbsp;
+
+`mail.transport.user`
+
+anonymous
+
+&nbsp; &nbsp;
+
+`mail.transport.password`
+
+password
+
+&nbsp; &nbsp;
+
+`mail.from`
+
+noreply@nuxeo.com
+
+The e-mail address will be sent from.
+
+&nbsp;
+
+`nuxeo.db.name`
+
+nuxeo | NUXEO
+
+Database name.
+
+&nbsp;
+
+`nuxeo.db.user`
+
+sa | nuxeo
+
+Database username.
+
+&nbsp;
+
+`nuxeo.db.password`
+
+(empty value) | password
+
+Database password.
+
+&nbsp; &nbsp;
+
+`nuxeo.db.host`
+
+localhost
+
+Database host URL.
+
+&nbsp;
+
+`nuxeo.db.port`
+
+3700 (DB2)
+
+5432 (PostgreSQL)
+3306 (MySQL)
+1521 (Oracle)
+1433 (MSSQL)
+
+Database host port.
+
+&nbsp;
+
+`nuxeo.db.jdbc.url`
+
+(database-dependent)
+
+Database JDBC connection URL for Nuxeo datasources, for instance `jdbc:postgresql://${nuxeo.db.host}:${nuxeo.db.port}/${nuxeo.db.name`}.
+
+&nbsp;
+
+`nuxeo.db.validationQuery`
+
+&nbsp;
+
+Database validation query, a `SELECT` statement used to check connections before using them, usually `SELECT 1`. Using this has a noticeable speed impact but makes connections resilient to network or sever problems.
+
+&nbsp;
+
+`nuxeo.db.min-pool-size`
+
+5
+
+Database minimum pool size for Nuxeo datasources.
+
+&nbsp;
+
+`nuxeo.db.max-pool-size`
+
+20 (JBoss)
+100 (Tomcat)
+
+Database maximum pool size for Nuxeo datasources.
+
+&nbsp; `nuxeo.db.idle-timeout-minutes` 0 (no timeout)
+
+Since Nuxeo 6.0\. Database timeout after which connections not in use are removed from the pool.
+
+Since Nuxeo 6.0
+
+`nuxeo.db.embeddedDatasources`
+
+true
+
+Embed datasources in nuxeo runtime &nbsp; `nuxeo.db.xaMode` false Enable XA mode (required if multiple datasources configured) &nbsp;
+
+`nuxeo.vcs.min-pool-size`
+
+0
+
+Database minimum pool size for Nuxeo repository (VCS).
+
+&nbsp;
+
+`nuxeo.vcs.max-pool-size`
+
+20
+
+Database maximum pool size for Nuxeo repository (VCS).
+
+&nbsp;
+
+```
+nuxeo.vcs.blocking-timeout-millis
+```
+
+100
+
+Since Nuxeo 5.8\. Database maximum wait time to get a connection from the pool when all connections are in use, for Nuxeo repository (VCS).
+
+Since Nuxeo 5.8
+
+`nuxeo.vcs.idle-timeout-minutes`
+
+10
+
+Since Nuxeo 5.8\. Database timeout after which connections not in use are removed from the pool, for Nuxeo repository (VCS).
+
+Since Nuxeo 5.8
+
+`nuxeo.vcs.fulltext.disabled`
+
+false Since Nuxeo 5.8\. Whether full text indexing and querying should be completely disabled in the repository. See [VCS Configuration]({{page page='vcs-configuration'}}) for details. Since Nuxeo 5.8 `nuxeo.vcs.fulltext.search.disabled` false Since Nuxeo 6.0\. Full text querying from VCS (database backend) is disabled, full text extraction is done. See [VCS Configuration]({{page page='vcs-configuration'}}) for details. Since Nuxeo 6.0 `nuxeo.vcs.fulltext.analyzer.language` english Since Nuxeo 7.3\. Full text analyzer language. Only applies to&nbsp;`postgresql` and `mssql` database types (see `nuxeo.db.type`). Since Nuxeo 7.3 `nuxeo.vcs.noddl` false Since Nuxeo 5.8\. Where DDL generation should be disabled in the repository. See [VCS Configuration]({{page page='vcs-configuration'}}) for details. Since Nuxeo 5.8 `nuxeo.vcs.ddlmode` execute Since Nuxeo 7.10-HF01\. What kind of DDL generation is done. See [VCS Configuration]({{page page='vcs-configuration'}}) for details. Since Nuxeo 7.10-HF01 `nuxeo.vcs.idtype` varchar Since Nuxeo 5.8\. The type of `id` column. See [VCS Configuration]({{page page='vcs-configuration'}}) for details. Since Nuxeo 5.8 `nuxeo.vcs.copy.findFreeName.disabled` false Since Nuxeo 7.3\. Set to true to disable free-name detection and let the database raise a constraint error in case of collisions **if the constraints have been added by hand**. Since Nuxeo 7.3
+
+`nuxeo.url`
+
+[http://localhost:8080/nuxeo](http://localhost:8080/nuxeo)
+
+Application URL (without final slash), should be the public URL of your server (i.e.: [http://www.yourdomain.com/](http://www.yourdomain.com/)....)
+
+&nbsp;
+
+`nuxeo.loopback.url`
+
+[http://localhost:8080/nuxeo](http://localhost:8080/nuxeo)
+
+Nuxeo URL, for connections from Nuxeo to itself (theme banks default). The port should be the same as `nuxeo.server.http.port.`
+
+If not explicitly configured, the loop back URL is generated from `nuxeo.bind.address`, `nuxeo.server.http.port` and `org.nuxeo.ecm.contextPath` values.
+
+&nbsp;
+
+`org.nuxeo.ecm.contextPath`
+
+/nuxeo
+
+Application context path.
+Before 5.6, you also have to accordingly rename all occurrences of nuxeo.xml (for Tomcat)
+
+Note: Changing this parameter is not enough. See [How to Change Context Path]({{page page='how-to-change-context-path'}})
+
+&nbsp;
+
+`org.nuxeo.ecm.platform.transform.ooo.host.name`
+
+127.0.0.1
+
+DEPRECATED.
+
+&nbsp;
+
+`org.nuxeo.ecm.platform.transform.ooo.host.port`
+
+8100
+
+DEPRECATED.
+
+&nbsp;
+
+`org.nuxeo.ecm.platform.transform.ooo.version`
+
+2.2.1
+
+DEPRECATED.
+
+&nbsp;
+
+`org.nuxeo.ecm.platform.transform.ooo.enableDaemon`
+
+true
+
+DEPRECATED.
+
+&nbsp;
+
+`jod.connection.protocol`
+
+SOCKET
+
+OpenOffice Connection protocol, either PIPE or SOCKET.
+
+&nbsp;
+
+`jod.max.tasks.per.process`
+
+200
+
+Maximum task per Office instance before restarting it.
+
+&nbsp;
+
+`jod.task.execution.timeout`
+
+120000
+
+Will stop the task if it s not completed after timeout.
+
+&nbsp;
+
+`jod.task.queue.timeout`
+
+30000
+
+Will stop looking for the next task in the queue after timeout.
+
+&nbsp;
+
+`jod.office.home`
+
+&nbsp;
+
+Home directory of OpenOffice or LibreOffice.
+
+&nbsp;
+
+`jod.office.ports`
+
+2003
+
+When running in SOCKET mode, comma-separated list of ports used for the office connection.
+
+&nbsp;
+
+`jod.office.pipes`
+
+&nbsp;
+
+When running in PIPE mode, comma-separated list of pipe names used for the office connection.
+
+&nbsp;
+
+`jod.jpipe.lib.path`
+
+&nbsp;
+
+Path to Jpipe library. Only used when connecting to OO through PIPE.
+
+&nbsp;
+
+`jod.template.profile.dir`
+
+&nbsp;
+
+Path to custom OO template directory.
+
+&nbsp;
+
+`opensocial.gadgets.host`
+
+localhost
+
+DEPRECATED since Nuxeo 6.0 &nbsp;
+
+`opensocial.gadgets.port`
+
+8080
+
+DEPRECATED since Nuxeo 6.0 &nbsp;
+
+`opensocial.proxy.proxySet`
+
+false
+
+DEPRECATED since Nuxeo 5.6
+
+Deprecated since Nuxeo 5.6
+
+`opensocial.proxy.proxyHost`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.host`)
+
+Deprecated since Nuxeo 5.6
+
+`opensocial.proxy.proxyPort`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.port`)
+
+Deprecated since Nuxeo 5.6
+
+`opensocial.proxy.user`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.login`)
+
+Deprecated since Nuxeo 5.6
+
+`opensocial.proxy.password`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.password`)
+
+Deprecated since Nuxeo 5.6
+
+`repository.clustering.enabled`
+
+false
+
+Activate clustering mode.
+
+&nbsp;
+
+`repository.clustering.id`
+
+&nbsp;
+
+Since Nuxeo 7.3\. The cluster node id for this Nuxeo instance, usually a number (see [NXP-17180](https://jira.nuxeo.com/browse/NXP-17180)).
+
+Since Nuxeo 7.3
+
+`repository.clustering.delay`
+
+1000
+
+When clustering is activated, defines the delay during which invalidations don't need to be processed (expressed in milliseconds).
+
+&nbsp;
+
+`repository.binary.store`
+
+&nbsp;
+
+Defines the folder where binaries are stored. Useful when using clustering or to change the location of binaries to another location.
+
+&nbsp; `nuxeo.core.binarymanager` &nbsp; Custom class for the Binary Manager, to replace the default file-base storage. &nbsp; `nuxeo.core.binarymanager_key` &nbsp; Since Nuxeo 6.0\. Key configuration for the binary manager, if applicable. Since Nuxeo 6.0
+
+`nuxeo.templates.parsing.extensions`
+
+xml,properties
+
+Deprecated since Nuxeo 5.6\. Files extensions being parsed for parameters replacement when copying templates.
+
+Deprecated since Nuxeo 5.6
+
+`nuxeo.plaintext_parsing_extensions`
+
+xml,properties
+
+Since Nuxeo 5.6\. Files extensions being parsed for parameters replacement when copying templates.
+
+Since Nuxeo 5.6
+
+`org.nuxeo.ecm.jboss.configuration`
+
+default
+
+JBoss configuration to use (`default`, `minimal`, `all`, ...)
+Pay attention to the fact that this won't apply to templates defining their own `_template_.target` value (for instance, "default" template sets `default.target=server/default/deploy` without being aware of `org.nuxeo.ecm.jboss.configuration` value).
+
+&nbsp;
+
+`zip.entry.encoding`
+
+&nbsp;
+
+Choose how to encode filename when exporting documents to zip in the worklist.
+
+Since Nuxeo 7.1, the ZIP entries names are encoded in UTF8&nbsp; by default. If you want to get the old behavior back (having entry name encoded in ascii), use `zip.entry.encoding=ascii`.
+
+Modified since Nuxeo 7.1
+
+`org.nuxeo.ecm.platform.liveedit.autoversioning`
+
+none,minor,major
+
+see [Configuration Examples]({{page page='configuration-examples'}})
+
+&nbsp;
+
+`nuxeo.wizard.done`
+
+true or false depending on the package
+
+If set to false, will start a setup wizard before starting Nuxeo.
+
+&nbsp;
+
+`nuxeo.http.proxy.host`
+
+&nbsp;
+
+HTTP proxy host.
+
+&nbsp;
+
+`nuxeo.http.proxy.port`
+
+&nbsp;
+
+HTTP proxy port.
+
+&nbsp;
+
+`nuxeo.http.proxy.login`
+
+&nbsp;
+
+HTTP proxy login.
+
+&nbsp;
+
+`nuxeo.http.proxy.password`
+
+&nbsp;
+
+HTTP proxy password.
+
+&nbsp; `nuxeo.http.proxy.ntlm.host` &nbsp; NT Lan Manager (NTLM) Proxy. Host name of the Windows machine running the Nuxeo server. &nbsp; `nuxeo.http.proxy.ntlm.domain` &nbsp; NT Lan Manager (NTLM) Proxy. Domain name to authenticate against. &nbsp; `nuxeo.http.proxy.pac.url` &nbsp; Since Nuxeo 5.9.3\. Proxy auto-config (PAC) file URL. Since Nuxeo 5.9.3
+
+`facelets.REFRESH_PERIOD`
+
+-1
+
+Indicates to the compiler the number of seconds to wait between subsequent checks for changes in modified JSF facelets in a running application. Useful for facelet debugging.
+To disable this compiler check use a value of -1 which is a recommended value for production deployments as compiler checks have an impact on application performance.
+
+Since Nuxeo 5.6, the parameter [`undefined`](#orgnuxeodev) should be used instead as it forces this parameter to value "2".
+
+&nbsp;
+
+`nuxeo.db.transactiontimeout`
+
+300
+
+Database transaction timeout in seconds (available for Tomcat server only)
+
+&nbsp;
+
+`server.status.key`
+
+&nbsp;
+
+Secure key for connecting to server status monitoring servlet. It is randomly generated if not set.
+It is also used by default&nbsp;for sensitive configuration data encryption, see `server.crypt.secretkey`.
+
+&nbsp;
+
+`session.timeout`
+
+60
+
+Session timeout (see [web.xml session-timeout](http://www.google.com/search?q=web.xml+session-timeout)).
+
+&nbsp;
+
+`nuxeo.updatecenter.disabled`
+
+false (unset)
+
+Disables the Update Center feature.
+
+&nbsp;
+
+`theme.useOldLocalConfiguration`
+
+false (unset)
+
+Uses the old local configuration for theme, selecting a theme page instead of a flavor.
+
+&nbsp;
+
+`org.nuxeo.big.file.size.limit`
+
+5Mi (unset)
+
+Redirects onto the big file download URL if size exceeds limit.
+
+&nbsp;
+
+`org.nuxeo.ecm.platform.ui.web.auth`
+`.NuxeoAuthenticationFilter.isLoginNotSynchronized`
+
+false (unset)
+
+Disables login synchronization.
+
+&nbsp;
+
+`nuxeo.wizard.packages.url`
+
+&nbsp;
+
+Defines the base URL used by the Setup Wizard to get the packages.xml file describing the available software packages options.
+
+&nbsp;
+
+`nuxeo.wizard.skippedpages`
+
+null
+
+Comma separated list of pages that should be skipped inside the wizard.
+
+&nbsp; `org.nuxeo.dnd.upload.timeout` 30000 Since Nuxeo 5.7.1 (5.6-HF08), maximum time for uploading a file via Drag & Drop to the server. Since Nuxeo 5.7.1 `org.nuxeo.dnd.exec.timeout` 30000 Since Nuxeo 5.7.1 (5.6-HF08), maximum time for executing import of files uploaded via Drag & Drop Since Nuxeo 5.7.1 `org.nuxeo.dnd.extendedmode.timeout` 2000 Since Nuxeo 5.7.1 (5.6-HF08), mouse over time before switching to extended mode UI (setting to -1 disables the extended mode) Since Nuxeo 5.7.1 `<span style="color: rgb(34,34,34);">nuxeo.jsf.</span> <span style="color: rgb(34,34,34);">numberOfConversationsInSession</span>` 4 Since Nuxeo 5.7.2, Parameter to control the number of conversation states that are saved in session. Each conversation holds a number of view states that is defined by `nuxeo.jsf.numberOfViewsInSession` Since Nuxeo 5.7.2 `nuxeo.jsf.numberOfViewsInSession` 4 Since Nuxeo 5.7.2 (5.6-HF20) Parameter to control the JSF init parameter `com.sun.faces.numberOfViewsInSession` Since Nuxeo 5.7.2 `nuxeo.jsf.numberOfLogicalViews` 4 Since Nuxeo 5.7.2 (5.6-HF20) Parameter to control the JSF init parameter `com.sun.faces.numberOfLogicalViews` Since Nuxeo 5.7.2
+
+`nuxeo.jsf.enableDoubleClickShield`
+
+true (unset) Since Nuxeo 5.7.3\. Enable a shield on forms to prevent users from submitting twice the same form (accidental double-click). Default value was false in 5.7.3 and is true since Nuxeo 5.8. Since Nuxeo 5.7.3
+
+`nuxeo.jsf.useAjaxTabs`
+
+false (unset) Since Nuxeo 5.8\. Enable ajaxified tabs on document views. Activation also relies on the user's browser because this feature requires manipulating the browser's session history in JavaScript to preserve bookmarkable URLs (see compatibility table at [http://caniuse.com/#search=pushstate](http://caniuse.com/#search=pushstate), for instance). Since Nuxeo 5.8 `<span style="color: rgb(34,34,34);">nuxeo.jsf.tmp.dir</span>` <span style="color: rgb(34,34,34);">`nuxeo.tmp.dir` (unset)</span> <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: <span style="color: rgb(0,0,0);">an absolute path to a directory on the file system. The&nbsp;</span>location<span style="color: rgb(0,0,0);">&nbsp;attribute does&nbsp;</span> **not** <span style="color: rgb(0,0,0);">&nbsp;support a path relative to the application context. This location is used to store files temporarily while the parts are processed or when the size of the file exceeds the specified&nbsp;</span>fileSizeThreshold<span style="color: rgb(0,0,0);">&nbsp;setting. The default location is&nbsp;</span>""<span style="color: rgb(0,0,0);">.</span></span> <span style="color: rgb(34,34,34);">Since Nuxeo 6.0</span> `<span style="color: rgb(34,34,34);">nuxeo.jsf.</span> <span style="color: rgb(34,34,34);">maxFileSize</span>` -1 (unlimited) (unset) <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: <span style="color: rgb(0,0,0);">&nbsp;the maximum size allowed for uploaded files, in bytes</span> <span style="color: rgb(0,0,0);">. The default size is unlimited.</span></span> <span style="color: rgb(34,34,34);">Since Nuxeo 6.0</span> `<span style="color: rgb(34,34,34);">nuxeo.jsf.</span> <span style="color: rgb(34,34,34);">maxRequestSize</span>` -1 (unlimited) (unset) <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: t<span style="color: rgb(0,0,0);">he maximum size allowed for a&nbsp;</span>multipart/form-data<span style="color: rgb(0,0,0);">&nbsp;request, in bytes. The default size is unlimited.</span></span> <span style="color: rgb(34,34,34);">Since Nuxeo 6.0</span> `<span style="color: rgb(34,34,34);">nuxeo.</span> <span style="color: rgb(34,34,34);">jsf.fileSizeThreshold</span>` 0 (unset) <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: <span style="color: rgb(0,0,0);">The file size in bytes after which the file will be temporarily stored on disk. The default size is 0 bytes.</span></span> <span style="color: rgb(34,34,34);">Since Nuxeo 6.0</span>
+
+`nuxeo.vcs.use-nulls-last-on-desc`
+
+true (unset)
+
+Since Nuxeo 5.8\. Ask the database to use "NULLS LAST" when sorting DESC. True by default to get the same result order between different databases.
+
+Also turning this option to false enable PostgreSQL and Oracle to use an index on the sorted column which can be huge performance improvement.
+
+&nbsp;
+
+Since Nuxeo 5.8 `org.nuxeo.connect.connector.cache.duration` 60min (5min for Studio packages) Since Nuxeo 5.6\. Nuxeo Packages list cache (in minutes). Since Nuxeo 5.6 `org.nuxeo.connect.server.reachable` true Since Nuxeo 5.7\. Launcher online/offline mode for connections to Nuxeo Connect. Since Nuxeo 5.7 `org.nuxeo.connect.url` [https://connect.nuxeo.com/nuxeo/site/](https://connect.nuxeo.com/nuxeo/site/) Nuxeo Connect URL. &nbsp; `nuxeo.automation.properties.multiline.escape` false
+
+Enable/Disable multi-line strings escaped with a trailing \ when using `Document.Update` or `Workflow.SetWorkflowVariables` Automation operations.
+
+&nbsp;
+
+`org.nuxeo.cmis.joins`
+
+false Since Nuxeo 6.0\. When true, CMISQL JOINs are allowed if VCS is used. Incompatible with `org.nuxeo.cmis.proxies=true`. Since Nuxeo 6.0
+
+`org.nuxeo.cmis.proxies`
+
+false Since Nuxeo 7.10-HF08 / Nuxeo 8.3\. When true, CMIS can see proxies. Incompatible with `org.nuxeo.cmis.joins=true`. Since Nuxeo 7.10-HF08
+
+`org.nuxeo.cmis.enableComplexProperties`
+
+false Since Nuxeo 7.1\. When true, complex properties are exposed as JSON-encoded strings. Since Nuxeo 7.1 `nuxeo.security.allowNegativeACL` false
+
+Since Nuxeo 6.0\. When true, enables adding negative ACL (deny permissions) in the UI, otherwise only grant permissions are available.
+
+Since Nuxeo 6.0
+
+`audit.elasticsearch.enabled`
+
+false | true
+
+Since Nuxeo 7.3\. See [Disabling Elasticsearch for Audit Logs]({{page space='ADMINDOC' page='Elasticsearch Setup#ElasticsearchSetup-DisablingElasticsearchforAuditLogs'}})
+
+Defaults to false on server upgrade, true on new install.
+
+Since Nuxeo 7.3 `audit.elasticsearch.indexName` `${elasticsearch.indexName}`-audit Name of the Elasticsearch index for audit logs. Since Nuxeo 7.10 `seqgen.elasticsearch.indexName` `${elasticsearch.indexName}`-uidgen Name of the Elasticsearch index for the uid sequencer. Since Nuxeo 7.10 `audit.elasticsearch.migration` false Since Nuxeo 7.3\. See [Triggering SQL to Elasticsearch Audit Logs Migration]({{page space='ADMINDOC' page='Elasticsearch Setup#ElasticsearchSetup-TriggeringSQLtoElasticsearchAuditLogsMigration'}}) Since Nuxeo 7.3 `audit.elasticsearch.migration.batchSize` 1000 Since Nuxeo 7.3\. See [Triggering SQL to Elasticsearch Audit Logs Migration]({{page space='ADMINDOC' page='Elasticsearch Setup#ElasticsearchSetup-TriggeringSQLtoElasticsearchAuditLogsMigration'}}) Since Nuxeo 7.3 `org.nuxeo.cmis.elasticsearch` false Since Nuxeo 7.2\. To send the CMISQL queries to Elasticsearch, set to true. Since Nuxeo 7.2
+
+<div class="container" title="Hint: double-click to select code">
+
+<div class="line number1 index0 alt2">`nuxeo.redis.enabled`</div>
+
+</div>
+
+false Set to true to activate Redis. Since Nuxeo 5.8 `nuxeo.redis.host` redishost &nbsp; Since Nuxeo 5.8 `nuxeo.redis.port` 6379 &nbsp; Since Nuxeo 5.8 `nuxeo.redis.password` &nbsp; &nbsp; Since Nuxeo 5.8 `nuxeo.redis.database` 0 &nbsp; Since Nuxeo 5.8 `nuxeo.redis.timeout` 2000 &nbsp; Since Nuxeo 5.8 `nuxeo.redis.maxTotal` 16 The maximum size of the Redis connections pool. Since Nuxeo 7.10-HF05 `nuxeo.redis.maxIdle` 8 The maximum number of Redis idle connections in the pool. Since Nuxeo 7.10-HF05 `nuxeo.redis.prefix` nuxeo: This allows you to use a single Redis server between several Nuxeo cluster installations by having a different prefix for each cluster. See the page [Redis Configuration]({{page page='redis-configuration'}}) for more details. Since Nuxeo 5.8 `server.crypt.secretkey` `${server.status.key}` Custom secret key used for sensitive configuration data encryption. It takes either a raw value or an URL (e.g. <a class="external-link" rel="nofollow">file:///path/to/secretkey</a> or [http://some.online.file.com](http://some.online.file.com)). Since Nuxeo 7.4 `server.crypt.keystore.path` `${javax.net.ssl.keyStore}` Path to the&nbsp;keystore to use for sensitive configuration data encryption. Since Nuxeo 7.4 `server.crypt.keystore.pass` `${javax.net.ssl.keyStorePassword:="changeit"}` The password used to protect the integrity of the keystore contents. Since Nuxeo 7.4 `server.crypt.keyalias` &nbsp; The alias prefix where to retrieve the secret key from the keystore. It is automatically suffixed with the algorithm ("AES" or "DES"). Since Nuxeo 7.4 `nuxeo.virtual.host` &nbsp;
+
+This parameter can be used to replace the nuxeo-virtual-host request header (usually when using HTTPS) when it is not possible to set it at the reverse-proxy level.
+The use of the header is still preferred as the parameter forces your Nuxeo instance to be accessible from one URL only.
+
+Example: https://my.nuxeo.com/
+
+Since Nuxeo 7.4 `elasticsearch.enabled` `true` Switch to enable/disable Elasticsearch usage
+
+Since 6.0
+
+`elasticsearch.indexName` `nuxeo` Name of the Elasticsearch index for the default document repository &nbsp; `elasticsearch.addressList` &nbsp; Comma separated list of Elasticsearch nodes, if empty use a local in JVM node (not for production) &nbsp; `elasticsearch.clusterName` `nuxeoCluster` Name of the Elasticsearch cluster to join &nbsp; `elasticsearch.indexNumberOfReplicas` `1` Number of replicas (not for local node) &nbsp; `elasticsearch.indexNumberOfShards` `5` Number of shards (not for local node) &nbsp; `elasticsearch.nodeName` `nuxeoNode` Name of the local node &nbsp; `elasticsearch.httpEnabled` `false` Does the local node accept HTTP request on port 9200 &nbsp; `elasticsearch.override.pageproviders` `default_search,DEFAULT_DOCUMENT_SUGGESTION` Comma separated list of CorePageProvider names to supersede by Elasticsearch &nbsp; `elasticsearch.reindex.bucketReadSize` `500` Reindexing option, number of documents to process per worker &nbsp; `elasticsearch.reindex.bucketWriteSize` `50` Reindexing option, number of documents to submit to Elasticsearch per bulk command &nbsp; `elasticsearch.indexing.maxThreads` `4` Maximum size of the indexing thread pool &nbsp; `elasticsearch.indexing.clearCompletedAfterSeconds` `90` Time to keep the completed indexing worker states &nbsp; `elasticsearch.adminCenter.displayClusterInfo` `false` Display Elasticsearch cluster and nodes information in the admin center @since 6.0-HF06, always true for embedded mode &nbsp; `elasticsearch.reindex.onStartup` `false` Reindex the repository content on startup if the index is empty &nbsp; `elasticsearch.httpReadOnly.baseUrl` `http://localhost:9200/` Required when using a standalone Elasticsearch instance. See [Elasticsearch Passthrough]({{page space='nxdoc710' page='elasticsearch-passthrough'}}). Since Nuxeo 7.10 `<span style="color: rgb(61,60,64);">nuxeo.directory.type</span>` `default` Type of directory, used for LDAP or multi-directory configuration. Possible values are `default`, `ldap`, `multi`. Since 6.0
 
 &nbsp;
 
